# calc

./: .gitignore  Cargo.toml  README.md
examples/: cat.calc  cat.json  out_of_order.calc  out_of_order.json  poly.calc  poly.json  simple_add.calc  simple_add.json  simple_bool.calc  simple_bool.json  trivial_add.calc
src/: ast.rs  calculator.lalrpop  calculator.pest  calculator.rs  compiler.rs  interpreter.rs  main.rs  parser.rs
src/ast/: annotation.rs  declaration.rs  error.rs  expression.rs  inliner.rs  mod.rs  optimizer.rs  program.rs  typechecker.rs
src/core/: expression.rs  inliner.rs  interpreter.rs  mod.rs  prim.rs
src/parser/: calculator.pest  mod.rs  parser.rs
src/plonk/: circuit_builder.rs  mod.rs  parameters.rs  prove.rs
