[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = {version = "4.4.8", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
