[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.8", features = ["derive"]}
derive_more = "0.99"
err-derive = "0.3.1"
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"
petgraph = "0.6.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"